<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/dialog_article"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/d20"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_article_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d15"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_19"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:text="What will be trends of spring 2016?" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/long_sample_text"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d200"
                android:layout_marginTop="@dimen/d20"
                android:scaleType="centerCrop"
                android:src="@drawable/background"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/d20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d250">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d10"
                    android:layout_marginRight="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="true"
                    android:textSize="@dimen/font_size_13"
                    android:text="@string/attachment_items"/>
                <include layout="@layout/item_products_list"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_tag_list"
                android:layout_width="match_parent"
                android:background="@color/colorWhite"
                android:layout_height="@dimen/d30"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:layout_marginTop="@dimen/d20"
                tools:listitem = "@layout/item_tags"/>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/d20"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:layout_height="1dp"
                android:background="@color/background_color"/>
            <FrameLayout
                android:layout_marginTop="@dimen/d20"
                android:layout_marginBottom="@dimen/d40"
                android:layout_marginLeft="@dimen/d10"
                android:layout_marginRight="@dimen/d10"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d30">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content">
                    <ImageButton
                        android:id="@+id/imb_unlike"
                        android:layout_width="@dimen/d25"
                        android:layout_height="@dimen/d25"
                        android:scaleType="fitXY"
                        android:visibility="gone"
                        android:background="@drawable/ic_like_color"/>
                    <ImageButton
                        android:id="@+id/imb_like"
                        android:layout_width="@dimen/d25"
                        android:layout_height="@dimen/d25"
                        android:scaleType="fitXY"
                        android:background="@drawable/ic_like"/>
                    <TextView
                        android:id="@+id/tv_like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d5"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_size_10"
                        android:text="15.1k"
                        tools:text="15.1k"/>
                    <ImageButton
                        android:id="@+id/imb_comment"
                        android:layout_width="@dimen/d25"
                        android:layout_height="@dimen/d25"
                        android:layout_marginLeft="@dimen/d15"
                        android:background="@drawable/ic_comment"/>
                    <TextView
                        android:id="@+id/tv_comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d5"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_size_10"
                        android:text="15.1k"
                        tools:text="5.1k"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="right">
                    <ImageView
                        android:layout_width="@dimen/d25"
                        android:layout_height="@dimen/d25"
                        android:layout_marginLeft="@dimen/d15"
                        android:src="@drawable/ic_time"/>
                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/d5"
                        android:textColor="@color/hint_color"
                        android:textSize="@dimen/font_size_10"
                        android:text="@string/sample_time"
                        tools:text="9h"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d400"
        android:background="@color/colorWhite">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.Collapsing.SectionTitle"
            app:contentScrim="@color/colorMain"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginBottom="24dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.Collapsing.ExpandedTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d360"
                android:src="@drawable/background"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d50"
                app:navigationIcon="@drawable/ic_back"
                app:layout_collapseMode = "pin"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="bottom|center"
                app:layout_collapseMode="parallax">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="@dimen/d25"
                        android:layout_height="@dimen/d25"
                        android:src="@drawable/ic_view"/>
                    <TextView
                        android:id="@+id/tv_view_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/d5"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_size_11"
                        android:text="15.1k"
                        tools:text="15.1k"/>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/d36"
                    android:paddingLeft="@dimen/d10"
                    android:paddingRight="@dimen/d10"
                    android:layout_marginTop="@dimen/d10"
                    android:text="@string/sample_text"
                    android:textSize="@dimen/font_size_13"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/shape_round_strike_white"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/d80"
                    android:layout_height="@dimen/d80"
                    android:layout_marginTop="@dimen/d10"
                    android:src="@drawable/img_profile"/>
            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>