...
            android:textCursorDrawable="@null"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="@android:color/transparent"
            android:singleLine="true" />
        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="@dimen/d40"
            android:layout_height="@dimen/d40"
            android:background="@drawable/ic_send"/>
    </LinearLayout>
</LinearLayout>
